# smta-panpac-2023

./: .gitmodules  README.md  colab-requirements.txt  pyproject.toml  scripts.py
notebooks/: experiment-visuals.ipynb
outputs/: beit-finetune-morning_off_off-20230119-142200-results-test_dream_evening_north.csv  beit-finetune-morning_off_off-20230119-142200-results-test_dream_morning_south.csv  beit-finetune-morning_off_off-20230119-142200-results-test_evening_west.csv  beit-finetune-morning_off_off-20230119-142200-results-test_morning_east.csv  beit-finetune-morning_off_off-20230119-142200-results-test_night_mid.csv  beit-finetune-morning_off_off-20230119-142200-results-test_noon_mid.csv  beit-finetune-morning_on_on-20230119-142036-results-test_dream_evening_north.csv  beit-finetune-morning_on_on-20230119-142036-results-test_dream_morning_south.csv  beit-finetune-morning_on_on-20230119-142036-results-test_evening_west.csv  beit-finetune-morning_on_on-20230119-142036-results-test_morning_east.csv  beit-finetune-morning_on_on-20230119-142036-results-test_night_mid.csv  beit-finetune-morning_on_on-20230119-142036-results-test_noon_mid.csv  beit-finetune-night_off_off-20230119-145846-results-test_dream_evening_north.csv  beit-finetune-night_off_off-20230119-145846-results-test_dream_morning_south.csv  beit-finetune-night_off_off-20230119-145846-results-test_evening_west.csv  beit-finetune-night_off_off-20230119-145846-results-test_morning_east.csv  beit-finetune-night_off_off-20230119-145846-results-test_night_mid.csv  beit-finetune-night_off_off-20230119-145846-results-test_noon_mid.csv  beit-finetune-noon_off_on-20230119-155630-results-test_dream_evening_north.csv  beit-finetune-noon_off_on-20230119-155630-results-test_dream_morning_south.csv  beit-finetune-noon_off_on-20230119-155630-results-test_evening_west.csv  beit-finetune-noon_off_on-20230119-155630-results-test_morning_east.csv  beit-finetune-noon_off_on-20230119-155630-results-test_night_mid.csv  beit-finetune-noon_off_on-20230119-155630-results-test_noon_mid.csv  beit-finetune-noon_on_off-20230119-155725-results-test_dream_evening_north.csv  beit-finetune-noon_on_off-20230119-155725-results-test_night_mid.csv  (+101 more)
(+3 files in other folders)
