[tool.poetry]
name = "smta-panpac-2023"
version = "0.1.0"
description = ""
authors = ["Chase Yakaboski <chase.th@dartmouth.edu>"]
readme = "README.md"
packages = [{include = "smta_panpac"}]

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.13.1"
numpy = "^1.24.1"
transformers = { path = "submodules/transformers", develop = false }
requests = "^2.28.1"
Pillow = "^9.4.0"
datasets = "^2.8.0"
torchvision = "^0.14.1"
ipython = "^8.8.0"
notebook = "^6.5.2"
seaborn = "^0.12.2"
matplotlib = "^3.6.3"
h5py = "^3.7.0"


[tool.poetry.scripts]
train_vcnn = 'scripts:train_vcnn'
train_vit = 'scripts:train_vit'
train_beit = 'scripts:train_beit'
run_vcnn = 'scripts:vcnn_experiments'
create_hdf5 = 'scripts:create_hdf5'
get_experiment_names = 'scripts:get_experiment_names'
run_experiment = 'scripts:run_experiment'
run_predictions = 'scripts:run_predictions'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
