[tool.poetry]
name = "smta-panpac-2023"
version = "0.1.0"
description = "Source code for SMTA PanPac Paper 2023"
authors = ["Chase Yakaboski <chase.th@dartmouth.edu>"]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
transformers = "^4.25.1"
torch = "^1.13.1"
numpy = "^1.24.1"
requests = "^2.28.1"
Pillow = "^9.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
